--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,13 @@ jobs:
 
     steps:
       # ...
-      - name: "Build & test"
-        run: |
-          echo "done!"
-
+      - name: Set Release Version
+        run: echo "RELEASE_VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        
+      - name: Create Named Release
       - uses: "marvinpinto/action-automatic-releases@latest"
         if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
+          automatic_release_tag: v${{ env.RELEASE_VERSION }}
           prerelease: false
