--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,15 @@
-
-name: CI
-
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  release:
-    types: [ created ]    
-
-  workflow_dispatch:
-
+    tags:
+      - 'v*.*.*'
 jobs:
-  pre-release:
-    name: "Pre Release"
-    runs-on: "ubuntu-latest"
-
+  test:
+    runs-on: ubuntu-latest
     steps:
-      # ...
-      - name: "Build & test"
+      - uses: actions/checkout@v2
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Test
         run: |
-          echo "done!"
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "3.0.0"
-          prerelease: false
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
