--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,4 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true   
           automatic_release_tag: ${{ env.RELEASE_VERSION }}
+          title: ${{ env.RELEASE_VERSION }}
