--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,29 @@
+name: CI
+
 on:
   push:
-    tags:
-      - '*.*.*'
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  release:
+    types: [ created ]    
+
+  workflow_dispatch:
 
 jobs:
-  generateChanegeLog:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
-        run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
+  pre-release:
+    name: "Pre Release"
+    runs-on: "ubuntu-latest"
 
+    steps:
+      # ...
+      - name: "Build & test"
+        run: |
+          echo "done!"
       - uses: "marvinpinto/action-automatic-releases@latest"
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
           automatic_release_tag: ${{ env.RELEASE_VERSION }}
+          prerelease: false
           title: ${{ env.RELEASE_VERSION }}
