[Update] another test...

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: ${{ env.RELEASE_VERSION }}
+          automatic_release_tag: "latest"
           prerelease: false
           title: ${{ env.RELEASE_VERSION }}
