[Fix] this fix maybe?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: "tagged-release"
 
 on:
+  release:
+    types: [ created ]
   push:
     tags:
-      - '*.*.*'
+      - '*.*.*'  
 
 jobs:
   tagged-release:
