--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Run a multi-line script
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: "get tag"
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
           
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ env.RELEASE_VERSION }}"
           prerelease: false
