--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,13 @@ jobs:
           echo $RELEASE_VERSION
           echo ${{ env.RELEASE_VERSION }}
           
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Automatic Pre-Release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "${{ env.RELEASE_VERSION }}"
+          automatic_release_tag: "latest"
           prerelease: false
+          title: "Hier gibt's die neuste PDF"
+          files: |
+            CHANGELOG.md
