--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,12 @@ name: CI
 
 on:
   push:
-    tags:
-      - '*.*.*'
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  release:
+    types: [ created ]    
+
 
 
   workflow_dispatch:
