--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ffmpeg-static": "^4.4.0",
     "libsodium-wrappers": "^0.7.9",
     "node-fetch": "^2.6.1",
+    "opusscript": "^0.0.8",
     "utf-8-validate": "^5.0.5",
     "zlib-sync": "^0.1.7"
   }
