[New] Added lyrics command which gets the lyrics for the current playing song

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "naseif",
   "license": "ISC",
   "dependencies": {
+    "@discord-player/extractor": "^3.0.2",
     "@discordjs/builders": "^0.6.0",
     "@discordjs/opus": "^0.6.0",
     "@discordjs/rest": "0.1.0-canary.0",
