--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eyesense-music-bot",
-  "version": "1.0.0",
+  "version": "8.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,11 +20,14 @@
     "@discordjs/opus": "^0.6.0",
     "@discordjs/rest": "0.1.0-canary.0",
     "bufferutil": "^4.0.3",
+    "chalk": "^4.1.2",
     "discord-api-types": "^0.22.0",
-    "discord-player": "^5.1.0",
+    "discord-player": "^5.1.0-dev.1632960868.9336ca0",
     "discord.js": "^13.1.0",
     "ffmpeg-static": "^4.4.0",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
+    "play-dl": "^1.0.3",
     "sodium": "^3.0.2",
     "utf-8-validate": "^5.0.5",
     "zlib-sync": "^0.1.7"
