--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "eyesense-music-bot",
-  "version": "9.0.0",
-  "description": "",
+  "version": "10.0.0",
+  "description": "Bot to play Music from Youtube, Soundcloud or Spotify using the new slash commands and a lot more!",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "keywords": [
     "music",
+    "discord-music",
+    "discord-music-bot",
+    "music-discord-bot",
+    "eyesense",
+    "spotify",
+    "soundcloud",
     "bot",
     "yotutbe-bot",
     "discord-bot"
@@ -15,12 +21,12 @@
   "author": "naseif",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
+    "@discordjs/builders": "^0.7.0",
     "@discordjs/opus": "^0.6.0",
     "@discordjs/rest": "0.1.0-canary.0",
-    "bufferutil": "^4.0.3",
+    "bufferutil": "^4.0.5",
     "chalk": "^4.1.2",
-    "discord-api-types": "^0.22.0",
+    "discord-api-types": "^0.24.0",
     "discord-player": "^5.1.0-dev.1633479141.44b30ad",
     "discord.js": "^13.2.0",
     "ffmpeg-static": "^4.4.0",
@@ -32,7 +38,7 @@
     "play-dl": "^1.0.3",
     "quickmongo": "^3.0.2",
     "sodium": "^3.0.2",
-    "utf-8-validate": "^5.0.5",
+    "utf-8-validate": "^5.0.7",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
