[Enhancement] updated play-dl to the latest version, fixed breaking changes for play command after play-dl update

--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@discordjs/builders": "^0.6.0",
     "@discordjs/opus": "^0.6.0",
     "@discordjs/rest": "0.1.0-canary.0",
+    "@discordjs/voice": "^0.6.0",
     "bufferutil": "^4.0.3",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.22.0",
-    "discord-player": "^5.1.0-dev.1633479141.44b30ad",
+    "discord-player": "^5.1.0-dev.1635725633.a0badb8",
     "discord.js": "^13.2.0",
     "ffmpeg-static": "^4.4.0",
     "genius-lyrics-api": "^3.2.0",
@@ -36,7 +37,8 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
     "node-fetch": "^2.6.1",
-    "play-dl": "^1.0.3",
+    "opusscript": "^0.0.8",
+    "play-dl": "^1.2.5",
     "quickmongo": "^3.0.2",
     "utf-8-validate": "^5.0.5"
   },
