--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@discordjs/voice": "^0.6.0",
     "bufferutil": "^4.0.3",
     "chalk": "^4.1.2",
+    "devtools-ts": "^1.0.4",
     "discord-api-types": "^0.22.0",
     "discord-player": "^5.2.0",
     "discord.js": "^13.3.1",
