--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "author": "naseif",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/opus": "^0.6.0",
-    "@discordjs/rest": "0.1.0-canary.0",
-    "@discordjs/voice": "^0.6.0",
+    "@discordjs/builders": "^0.11.0",
+    "@discordjs/opus": "^0.7.0",
+    "@discordjs/rest": "^0.2.0-canary.0",
+    "@discordjs/voice": "^0.7.5",
     "bufferutil": "^4.0.3",
     "chalk": "^4.1.2",
     "devtools-ts": "^1.0.4",
-    "discord-api-types": "^0.22.0",
+    "discord-api-types": "^0.26.1",
     "discord-player": "^5.2.0",
-    "discord.js": "^13.3.1",
+    "discord.js": "^13.5.0",
     "ffmpeg-static": "^4.4.0",
     "genius-lyrics-api": "^3.2.0",
     "jikanjs": "^0.7.0",
@@ -39,7 +39,7 @@
     "mongoose": "^6.0.8",
     "node-fetch": "^2.6.1",
     "opusscript": "^0.0.8",
-    "play-dl": "^1.2.5",
+    "play-dl": "^1.7.2",
     "quickmongo": "^3.0.2",
     "utf-8-validate": "^5.0.5"
   },
