--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "chalk": "^4.1.2",
     "devtools-ts": "^1.0.4",
     "discord-api-types": "^0.26.1",
-    "discord-player": "^5.2.0",
+    "discord-player": "^5.1.0-dev.1635682042.a0badb8",
     "discord.js": "^13.5.0",
     "ffmpeg-static": "^4.4.0",
     "genius-lyrics-api": "^3.2.0",
