--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.3.0",
     "@discordjs/voice": "^0.8.0",
+    "@distube/soundcloud": "^1.1.0",
+    "@distube/spotify": "^1.2.1",
+    "@distube/yt-dlp": "^1.0.2",
     "@sapphire/decorators": "^4.3.4",
     "@sapphire/discord-utilities": "^2.10.3",
     "@sapphire/discord.js-utilities": "^4.9.7",
@@ -50,9 +53,9 @@
     "discord-api-types": "^0.27.3",
     "discord-player": "^5.2.2",
     "discord.js": "^13.6.0",
+    "distube": "^3.3.4",
     "ffmpeg-static": "^4.4.1",
     "genius-lyrics-api": "^3.2.0",
-    "jericho-player": "^1.1.28",
     "jikanjs": "^0.7.0",
     "libsodium-wrappers": "^0.7.9",
     "moment": "^2.29.1",
