Created Bot class to manage the nodes which extends the SapphireClient class

--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "discord-api-types": "^0.27.3",
     "discord-player": "^5.2.2",
     "discord.js": "^13.6.0",
-    "erela.js": "^2.3.3",
     "ffmpeg-static": "^4.4.1",
     "genius-lyrics-api": "^3.2.0",
     "jikanjs": "^0.7.0",
+    "lavaclient": "^4.0.8",
     "libsodium-wrappers": "^0.7.9",
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
