--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@sapphire/type": "^2.2.0",
     "@sapphire/utilities": "^3.6.2",
     "bufferutil": "^4.0.6",
-    "chalk": "^4.1.2",
     "devtools-ts": "^1.1.0",
     "discord-api-types": "^0.27.3",
     "discord-player": "^5.2.2",
@@ -56,24 +55,23 @@
     "jikanjs": "^0.7.0",
     "lavaclient": "^4.0.8",
     "libsodium-wrappers": "^0.7.9",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
     "node-fetch": "^2.6.1",
     "opusscript": "^0.0.8",
     "play-dl": "^1.8.1",
     "quickmongo": "^3.0.2",
-    "reflect-metadata": "^0.1.13",
     "utf-8-validate": "^5.0.8"
   },
   "devDependencies": {
     "@sapphire/prettier-config": "^1.4.3",
     "@sapphire/ts-config": "^3.3.4",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.25",
-    "@types/ws": "^8.5.3",
     "mdtable": "^0.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "tsc-watch": "^5.0.3",
     "typescript": "^4.6.3"
   }
 }
