--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "mdtable": "^0.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
+    "tsc-watch": "^5.0.3",
     "typescript": "^4.6.3"
   }
 }
